--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
   <body>
     <header>
       <div class="about-me">
-        <img src="" alt="" />
-        <h1>Frodo Baggins</h1>
-        <div>
+        <div class="image">
+          <img src="imgs/frodo.jfif" alt="Frodo Baggins" />
+          <h1 class="name">Frodo Baggins</h1>
+        </div>
+        <div class="content">
           <h2>About Me</h2>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
@@ -28,44 +30,44 @@
     <main>
       <h2>My work</h2>
       <div class="cards">
-        <div>
+        <div class="project">
           <img src="" alt="" />
-          <h2>One Ring Journey</h2>
+          <h3>One Ring Journey</h3>
           <svg></svg>
           <svg></svg>
           <p>Successfully transported the One Ring to Mount Doom.</p>
         </div>
-        <div>
+        <div class="project">
           <img src="" alt="" />
-          <h2>Fellowship of the Ring</h2>
+          <h3>Fellowship of the Ring</h3>
           <svg></svg>
           <svg></svg>
           <p>Worked together with 8 other team members with the goal of destroying the ring.</p>
         </div>
-        <div>
+        <div class="project">
           <img src="" alt="" />
-          <h2>Journey Through Moria</h2>
+          <h3>Journey Through Moria</h3>
           <svg></svg>
           <svg></svg>
           <p>Went through multiple challenges inside the Mines of Moria, including a fight with Balrog.</p>
         </div>
-        <div>
+        <div class="project">
           <img src="" alt="" />
-          <h2>Middle-Earth Navigation</h2>
+          <h3>Middle-Earth Navigation</h3>
           <svg></svg>
           <svg></svg>
           <p>Navigated across countless places in Middle-Earth.</p>
         </div>
-        <div>
+        <div class="project">
           <img src="" alt="" />
-          <h2>Crossing Mordor</h2>
+          <h3>Crossing Mordor</h3>
           <svg></svg>
           <svg></svg>
           <p>Managed to enter the terrifying land of Mordor and survive!</p>
         </div>
-        <div>
+        <div class="project">
           <img src="" alt="" />
-          <h2>Destruction of the One Ring</h2>
+          <h3>Destruction of the One Ring</h3>
           <svg></svg>
           <svg></svg>
           <p>Achieved the destruction of Sauron's ring and saved the world!</p>
@@ -78,13 +80,19 @@
         <p>Please get in touch if need a ring-bearer.</p>
         <p>Bag End, Hobbiton</p>
         <p>Shire</p>
-        <svg></svg>
-        <p>Phone?</p>
-        <svg></svg>
-        <p>Email?</p>
-        <svg></svg>
-        <svg></svg>
-        <svg></svg>
+        <div class="contact-item">
+          <svg></svg>
+          <p>Phone?</p>
+        </div>
+        <div class="contact-item">
+          <svg></svg>
+          <p>Email?</p>
+        </div>
+        <div class="icons">
+          <svg></svg>
+          <svg></svg>
+          <svg></svg>
+        </div>
       </div>
       <img src="" alt="" />
     </footer>
