Finished working on the header

--- a/index.html
+++ b/index.html
@@ -21,9 +21,11 @@
             aliqua. Volutpat est velit egestas dui id ornare arcu odio. Amet massa vitae tortor condimentum lacinia. Amet volutpat
             consequat mauris nunc congue nisi vitae suscipit tellus.
           </p>
-          <svg></svg>
-          <svg></svg>
-          <svg></svg>
+          <div class="icons">
+            <svg></svg>
+            <svg></svg>
+            <svg></svg>
+          </div>
         </div>
       </div>
     </header>
