positioned the cards in main

--- a/index.html
+++ b/index.html
@@ -34,44 +34,56 @@
       <div class="cards">
         <div class="project">
           <img src="" alt="" />
-          <h3>One Ring Journey</h3>
-          <svg></svg>
-          <svg></svg>
+          <div class="project-title">
+            <h3>One Ring Journey</h3>
+            <svg></svg>
+            <svg></svg>
+          </div>
           <p>Successfully transported the One Ring to Mount Doom.</p>
         </div>
         <div class="project">
           <img src="" alt="" />
-          <h3>Fellowship of the Ring</h3>
-          <svg></svg>
-          <svg></svg>
+          <div class="project-title">
+            <h3>Fellowship of the Ring</h3>
+            <svg></svg>
+            <svg></svg>
+          </div>
           <p>Worked together with 8 other team members with the goal of destroying the ring.</p>
         </div>
         <div class="project">
           <img src="" alt="" />
-          <h3>Journey Through Moria</h3>
-          <svg></svg>
-          <svg></svg>
+          <div class="project-title">
+            <h3>Journey Through Moria</h3>
+            <svg></svg>
+            <svg></svg>
+          </div>
           <p>Went through multiple challenges inside the Mines of Moria, including a fight with Balrog.</p>
         </div>
         <div class="project">
           <img src="" alt="" />
-          <h3>Middle-Earth Navigation</h3>
-          <svg></svg>
-          <svg></svg>
+          <div class="project-title">
+            <h3>Middle-Earth Navigation</h3>
+            <svg></svg>
+            <svg></svg>
+          </div>
           <p>Navigated across countless places in Middle-Earth.</p>
         </div>
         <div class="project">
           <img src="" alt="" />
-          <h3>Crossing Mordor</h3>
-          <svg></svg>
-          <svg></svg>
+          <div class="project-title">
+            <h3>Crossing Mordor</h3>
+            <svg></svg>
+            <svg></svg>
+          </div>
           <p>Managed to enter the terrifying land of Mordor and survive!</p>
         </div>
         <div class="project">
           <img src="" alt="" />
-          <h3>Destruction of the One Ring</h3>
-          <svg></svg>
-          <svg></svg>
+          <div class="project-title">
+            <h3>Destruction of the One Ring</h3>
+            <svg></svg>
+            <svg></svg>
+          </div>
           <p>Achieved the destruction of Sauron's ring and saved the world!</p>
         </div>
       </div>
@@ -79,7 +91,7 @@
     <footer>
       <div class="contact-info">
         <h2>Contact Me</h2>
-        <p>Please get in touch if need a ring-bearer.</p>
+        <p>Please get in touch if you need a ring-bearer!</p>
         <p>Bag End, Hobbiton</p>
         <p>Shire</p>
         <div class="contact-item">
