Finished main with its imgs

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
       <div class="about-me">
         <div class="image">
-          <img src="imgs/frodo.jfif" alt="Frodo Baggins" />
+          <img src="imgs/frodo.png" alt="Frodo Baggins" />
           <h1 class="name">Frodo Baggins</h1>
         </div>
         <div class="content">
@@ -33,58 +33,70 @@
       <h2>My work</h2>
       <div class="cards">
         <div class="project">
-          <img src="" alt="" />
-          <div class="project-title">
-            <h3>One Ring Journey</h3>
-            <svg></svg>
-            <svg></svg>
+          <img src="imgs/Lord-of-the-Rings-One-Ring.avif" alt="One Ring" />
+          <div class="content">
+            <div class="project-title">
+              <h3>One Ring Journey</h3>
+              <svg></svg>
+              <svg></svg>
+            </div>
+            <p>Successfully transported the One Ring to Mount Doom.</p>
           </div>
-          <p>Successfully transported the One Ring to Mount Doom.</p>
         </div>
         <div class="project">
-          <img src="" alt="" />
-          <div class="project-title">
-            <h3>Fellowship of the Ring</h3>
-            <svg></svg>
-            <svg></svg>
+          <img src="imgs/Dominic-Monaghan-Merry-scene-Elijah-Wood-Frodo.webp" alt="The Fellowship of the Ring" />
+          <div class="content">
+            <div class="project-title">
+              <h3>Fellowship of the Ring</h3>
+              <svg></svg>
+              <svg></svg>
+            </div>
+            <p>Worked together with 8 other team members with the goal of destroying the ring.</p>
           </div>
-          <p>Worked together with 8 other team members with the goal of destroying the ring.</p>
         </div>
         <div class="project">
-          <img src="" alt="" />
-          <div class="project-title">
-            <h3>Journey Through Moria</h3>
-            <svg></svg>
-            <svg></svg>
+          <img src="imgs/Fellowship-in-moria.webp" alt="Battle in Moria" />
+          <div class="content">
+            <div class="project-title">
+              <h3>Journey Through Moria</h3>
+              <svg></svg>
+              <svg></svg>
+            </div>
+            <p>Went through multiple challenges inside the Mines of Moria, including a fight with Balrog.</p>
           </div>
-          <p>Went through multiple challenges inside the Mines of Moria, including a fight with Balrog.</p>
         </div>
         <div class="project">
-          <img src="" alt="" />
-          <div class="project-title">
-            <h3>Middle-Earth Navigation</h3>
-            <svg></svg>
-            <svg></svg>
+          <img src="imgs/Middle-earth_map.jpg" alt="Map of the Middle-Earth" style="object-fit: fill" />
+          <div class="content">
+            <div class="project-title">
+              <h3>Middle-Earth Navigation</h3>
+              <svg></svg>
+              <svg></svg>
+            </div>
+            <p>Navigated across countless places in Middle-Earth.</p>
           </div>
-          <p>Navigated across countless places in Middle-Earth.</p>
         </div>
         <div class="project">
-          <img src="" alt="" />
-          <div class="project-title">
-            <h3>Crossing Mordor</h3>
-            <svg></svg>
-            <svg></svg>
+          <img src="imgs/mordor.jpg" alt="Mordor" />
+          <div class="content">
+            <div class="project-title">
+              <h3>Crossing Mordor</h3>
+              <svg></svg>
+              <svg></svg>
+            </div>
+            <p>Managed to enter the terrifying land of Mordor and survive!</p>
           </div>
-          <p>Managed to enter the terrifying land of Mordor and survive!</p>
         </div>
         <div class="project">
-          <img src="" alt="" />
-          <div class="project-title">
-            <h3>Destruction of the One Ring</h3>
-            <svg></svg>
-            <svg></svg>
+          <img src="imgs/ring.jfif" alt="The ring being destroyed" />
+          <div class="content">
+            <div class="project-title">
+              <h3>Destruction of the One Ring</h3>
+              <svg></svg>
+              <svg></svg>
+            </div>
+            <p>Achieved the destruction of Sauron's ring and saved the world!</p>
           </div>
-          <p>Achieved the destruction of Sauron's ring and saved the world!</p>
         </div>
       </div>
     </main>
