Finished major work with footer

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
           <svg></svg>
         </div>
       </div>
-      <img src="" alt="" />
+      <img src="imgs/frodo-sword.jpg" alt="" />
     </footer>
   </body>
 </html>
