New font and better card spacing

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Homepage</title>
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="modern-normalize.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet" />
   </head>
   <body>
     <header>
@@ -95,7 +98,7 @@
               <svg></svg>
               <svg></svg>
             </div>
-            <p>Achieved the destruction of Sauron's ring and saved the world!</p>
+            <p>Achieved the destruction of Sauron's ring, saving the world!</p>
           </div>
         </div>
       </div>
