Almost finished project for the desktop screen. Animations as to-do

--- a/index.html
+++ b/index.html
@@ -9,6 +9,38 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet" />
+    <!-- Github Icon -->
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
+    <!-- LinkedIn Icon -->
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
+    <!-- Twitter/X Icon -->
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
+    <!-- Open in new Icon -->
+    <svg style="display: none">
+      <symbol id="icon" viewBox="0 -960 960 960">
+        <path
+          d="M200-120q-33 0-56.5-23.5T120-200v-560q0-33 23.5-56.5T200-840h280v80H200v560h560v-280h80v280q0 33-23.5 56.5T760-120H200Zm188-212-56-56 372-372H560v-80h280v280h-80v-144L388-332Z"
+        />
+      </symbol>
+    </svg>
+    <!-- Phone Icon -->
+    <svg style="display: none">
+      <symbol id="phone-outline" viewBox="0 0 24 24">
+        <title>phone-outline</title>
+        <path
+          d="M20,15.5C18.8,15.5 17.5,15.3 16.4,14.9C16.3,14.9 16.2,14.9 16.1,14.9C15.8,14.9 15.6,15 15.4,15.2L13.2,17.4C10.4,15.9 8,13.6 6.6,10.8L8.8,8.6C9.1,8.3 9.2,7.9 9,7.6C8.7,6.5 8.5,5.2 8.5,4C8.5,3.5 8,3 7.5,3H4C3.5,3 3,3.5 3,4C3,13.4 10.6,21 20,21C20.5,21 21,20.5 21,20V16.5C21,16 20.5,15.5 20,15.5M5,5H6.5C6.6,5.9 6.8,6.8 7,7.6L5.8,8.8C5.4,7.6 5.1,6.3 5,5M19,19C17.7,18.9 16.4,18.6 15.2,18.2L16.4,17C17.2,17.2 18.1,17.4 19,17.4V19Z"
+        />
+      </symbol>
+    </svg>
+    <!-- Email Icon -->
+    <svg style="display: none">
+      <symbol id="email-outline" viewBox="0 0 24 24">
+        <title>email-outline</title>
+        <path
+          d="M22 6C22 4.9 21.1 4 20 4H4C2.9 4 2 4.9 2 6V18C2 19.1 2.9 20 4 20H20C21.1 20 22 19.1 22 18V6M20 6L12 11L4 6H20M20 18H4V8L12 13L20 8V18Z"
+        />
+      </symbol>
+    </svg>
   </head>
   <body>
     <header>
@@ -25,9 +57,9 @@
             consequat mauris nunc congue nisi vitae suscipit tellus.
           </p>
           <div class="icons">
-            <svg></svg>
-            <svg></svg>
-            <svg></svg>
+            <i class="devicon-github-original colored"></i>
+            <i class="devicon-linkedin-plain"></i>
+            <i class="devicon-twitter-original colored"></i>
           </div>
         </div>
       </div>
@@ -40,8 +72,8 @@
           <div class="content">
             <div class="project-title">
               <h3>One Ring Journey</h3>
-              <svg></svg>
-              <svg></svg>
+              <i class="devicon-github-original colored"></i>
+              <svg class="icon"><use xlink:href="#icon"></use></svg>
             </div>
             <p>Successfully transported the One Ring to Mount Doom.</p>
           </div>
@@ -51,8 +83,8 @@
           <div class="content">
             <div class="project-title">
               <h3>Fellowship of the Ring</h3>
-              <svg></svg>
-              <svg></svg>
+              <i class="devicon-github-original colored"></i>
+              <svg class="icon"><use xlink:href="#icon"></use></svg>
             </div>
             <p>Worked together with 8 other team members with the goal of destroying the ring.</p>
           </div>
@@ -62,8 +94,8 @@
           <div class="content">
             <div class="project-title">
               <h3>Journey Through Moria</h3>
-              <svg></svg>
-              <svg></svg>
+              <i class="devicon-github-original colored"></i>
+              <svg class="icon"><use xlink:href="#icon"></use></svg>
             </div>
             <p>Went through multiple challenges inside the Mines of Moria, including a fight with Balrog.</p>
           </div>
@@ -73,8 +105,8 @@
           <div class="content">
             <div class="project-title">
               <h3>Middle-Earth Navigation</h3>
-              <svg></svg>
-              <svg></svg>
+              <i class="devicon-github-original colored"></i>
+              <svg class="icon"><use xlink:href="#icon"></use></svg>
             </div>
             <p>Navigated across countless places in Middle-Earth.</p>
           </div>
@@ -84,8 +116,8 @@
           <div class="content">
             <div class="project-title">
               <h3>Crossing Mordor</h3>
-              <svg></svg>
-              <svg></svg>
+              <i class="devicon-github-original colored"></i>
+              <svg class="icon"><use xlink:href="#icon"></use></svg>
             </div>
             <p>Managed to enter the terrifying land of Mordor and survive!</p>
           </div>
@@ -95,8 +127,8 @@
           <div class="content">
             <div class="project-title">
               <h3>Destruction of the One Ring</h3>
-              <svg></svg>
-              <svg></svg>
+              <i class="devicon-github-original colored"></i>
+              <svg class="icon"><use xlink:href="#icon"></use></svg>
             </div>
             <p>Achieved the destruction of Sauron's ring, saving the world!</p>
           </div>
@@ -110,17 +142,17 @@
         <p>Bag End, Hobbiton</p>
         <p>Shire</p>
         <div class="contact-item">
-          <svg></svg>
+          <svg class="phone"><use xlink:href="#phone-outline"></use></svg>
           <p>Phone?</p>
         </div>
         <div class="contact-item">
-          <svg></svg>
+          <svg class="email"><use xlink:href="#email-outline"></use></svg>
           <p>Email?</p>
         </div>
         <div class="icons">
-          <svg></svg>
-          <svg></svg>
-          <svg></svg>
+          <i class="devicon-github-original colored"></i>
+          <i class="devicon-linkedin-plain"></i>
+          <i class="devicon-twitter-original colored"></i>
         </div>
       </div>
       <img src="imgs/frodo-sword.jpg" alt="" />
