A proper "about me" text

--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
         <div class="content">
           <h2>About Me</h2>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-            aliqua. Volutpat est velit egestas dui id ornare arcu odio. Amet massa vitae tortor condimentum lacinia. Amet volutpat
-            consequat mauris nunc congue nisi vitae suscipit tellus.
+            Greetings! I’m Frodo Baggins, a hobbit from the Shire, known for my journey to destroy the One Ring. Raised in Bag
+            End, Hobbiton, I’ve traveled far and wide, learning the value of courage, friendship, and hope. Discover my
+            Middle-earth journey and the wisdom gained along the way.
           </p>
           <div class="icons">
             <i class="devicon-github-original colored"></i>
